--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="content">
-        <h3>Hi, I am Elias Azoum</h3>
+        <h3>Hi, I am Ilias Azoum</h3>
         <span>Full-stack Engineer</span>
         <p>Personable Lead Software Developer accustomed to heading up successful development teams through agile direction and careful delegation. Willing to direct large-scale teams or work hands-on to complete extremely difficult projects. Brings both cutting-edge programming expertise and exceptional interpersonal skills to leadership roles.</p>
         <a href="about.html" class="btn"> about me <i class="fas fa-user"></i> </a>
